# OpenCV_Poker

./: .gitignore  CMakeLists.txt  init.bat
resources/: J77B970yUyxFukTz4MUGueyjFe3mf146.jfif
src/: Card.cpp  Card.h  DataSetCards.cpp  DataSetCards.h  Main.cpp  Main.h  MatchCards.cpp  MatchCards.h  SolutionBResult.h
